# MyPersonalTwitchBot

./: .clang-format  .cmake-format  .gitignore  .python-version  CMakeController.sh  CMakeLists.txt  LICENSE  README.md  TemplateRenamer.sh  conanfile.txt  members.json
Hidden/: aarch64.cmake  conanfile.py  readme.md
Source/: MyTwitchBot.cpp
Source/Core/: Command.cpp  Command.h  CommandSet.cpp  CommandSet.h  ScopeExit.cpp  ScopeExit.h  Throttler.cpp  Throttler.h  Utils.cpp  Utils.h
Source/Inet/: InetSocket.cpp  InetSocket.h
Source/Threading/: Address.cpp  Address.h  Message.cpp  Message.h  PostOffice.cpp  PostOffice.h  RAIIMutex.cpp  RAIIMutex.h
Standalone/: CMakeLists.txt
Standalone/Source/: Main.cpp
cmake/: CPM.cmake  tools.cmake
include/MyTwitchBot/: MyTwitchBot.hpp
